Fix 'prose' classes and sort a few minor layout issues

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,4 +26,10 @@
     font-size: 1rem;
 }
 
-
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
